bootstrap/fraud-detection-deployment/fraud-detection/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-detection
  labels:
    app: fraud-detection
    argocd.argoproj.io/managed-by: openshift-gitops
    opendatahub.io/dashboard: 'true'      
  annotations:
    openshift.io/display-name: "Fraud Detection"
    argocd.argoproj.io/sync-wave: "0"
