bootstrap/fraud-detection-deployment/fraud-detection/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: fraud-detection
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ports:
  - name: api
    port: 9000
    targetPort: api
  - name: console
    port: 9090
    targetPort: 9090
  selector:
    app: fraud-detection
  sessionAffinity: None
  type: ClusterIP
